Fixed button outline getting clipped and centred the deck folders on the home page as well as always making the scroll bar on the far right

--- a/src/components/componentStyles/Home.css
+++ b/src/components/componentStyles/Home.css
@@ -30,11 +30,12 @@
     gap: 4em;
 
     overflow-y:  scroll;
-    /*overflow-x: hidden;*/
+    overflow-x: visible;
 
     padding-left: 17px; /* TODO: Ensure this is correct for scrollbar width*/
     scrollbar-color: #a8a8a8 transparent; /* TODO: Change colour? */
     margin-inline: 5px;
+    width: 100%;
 }
 
 /*.deck-folders::-webkit-scrollbar {*/
